--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,2 +1,4 @@
 set -g prefix C-Space
 set-window-option -g mode-keys vi
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
