--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,4 +13,5 @@ set -g @plugin 'arcticicestudio/nord-tmux'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
-
+set -s escape-time 0
+bind C-v paste-buffer
