--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,3 +15,6 @@ set -g @plugin 'arcticicestudio/nord-tmux'
 run -b '~/.tmux/plugins/tpm/tpm'
 set -s escape-time 0
 bind C-v paste-buffer
+# Split buffers on same $dir
+bind % split-window -v -c "#{pane_current_path}"
+bind '"' split-window -v -c "#{pane_current_path}"
