--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,6 +2,7 @@ set -g prefix C-Space
 set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
+set -g default-terminal "screen-256color"
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
@@ -16,5 +17,5 @@ run -b '~/.tmux/plugins/tpm/tpm'
 set -s escape-time 0
 bind C-v paste-buffer
 # Split buffers on same $dir
-bind % split-window -v -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
 bind '"' split-window -v -c "#{pane_current_path}"
