--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,21 +1,26 @@
 set -g prefix C-Space
+
 set-window-option -g mode-keys vi
+
 bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
+
 set -g default-terminal "screen-256color"
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'arcticicestudio/nord-tmux'
-# Other examples:
-# set -g @plugin 'github_username/plugin_name'
-# set -g @plugin 'git@github.com/user/plugin'
-# set -g @plugin 'git@bitbucket.com/user/plugin'
+set -g @plugin 'schasse/tmux-jump'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-sidebar'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+set -g @continuum-restore 'on'
+
 run -b '~/.tmux/plugins/tpm/tpm'
 set -s escape-time 0
+
 bind C-v paste-buffer
-# Split buffers on same $dir
 bind % split-window -h -c "#{pane_current_path}"
 bind '"' split-window -v -c "#{pane_current_path}"
