--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -26,11 +26,11 @@ window:
   # Blank space added around the window in pixels. This padding is scaled
   # by DPI and the specified value is always added at both opposing sides.
   padding:
-    x: 0
-    y: 0
+    x: 1
+    y: 1
 
   # Spread additional padding evenly around the terminal content.
-  dynamic_padding: false
+  dynamic_padding: true
 
   # Window decorations
   #
@@ -80,17 +80,17 @@ tabspaces: 8
 font:
   # Normal (roman) font face
   normal:
-    family: Fira Code
+    family: FiraCode Nerd Font Mono
     style: Regular
 
   # Bold font face
   bold:
-    family: Fira Code
+    family: FiraCode Nerd Font Mono
     style: Bold
 
   # Italic font face
   italic:
-      family: Fira Code
+      family: FiraCode Nerd Font Mono
       style: Italic
 
   # Point size
@@ -315,7 +315,6 @@ live_config_reload: true
 enable_experimental_conpty_backend: false
 
 # Send ESC (\x1b) before characters when alt is pressed.
-alt_send_esc: true
 
 # Key bindings
 #
