--- a/sway/config
+++ b/sway/config
@@ -2,23 +2,29 @@ set $WOBSOCK $XDG_RUNTIME_DIR/wob.sock
 exec mako 
 exec rm -f $WOBSOCK && mkfifo $WOBSOCK && tail -f $WOBSOCK | wob
 
+# swayfx config aka eye candy
+blur enable
+shadows enable
+
 set $mod Mod4
 set $left h
 set $down j
 set $up k
 set $right l
 set $term alacritty
-set $menu tofi-drun | xargs swaymsg exec --
-#for_window [app_id="^launcher$"] floating enable, sticky enable, resize set 30 ppt 60 ppt, border pixel 10
-#set $menu exec $term --c launcher --e sway-launcher-desktop
-# print -rC1 -- ${(ko)commands}
+# ainda n decidi que porra de launcher usar, muitas opções, o tofi continua interessante por ter inicialização mais rapida
+#set $menu tofi-drun | xargs swaymsg exec --
+set $menu fuzzel | xargs swaymsg exec --
 bindsym $mod+d exec $menu
+bindsym $mod+apostrophe exec passotp
 
 output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
 
 input * {
     xkb_layout "br"
 }
+
+floating_modifier $mod normal
 
 bindsym XF86AudioRaiseVolume exec pactl set-sink-volume @DEFAULT_SINK@ +5% && pactl get-sink-volume @DEFAULT_SINK@ | head -n 1| awk '{print substr($5, 1, length($5)-1)}' > $WOBSOCK
 bindsym XF86AudioLowerVolume exec pactl set-sink-volume @DEFAULT_SINK@ -5% && pactl get-sink-volume @DEFAULT_SINK@ | head -n 1 | awk '{print substr($5, 1, length($5)-1)}' > $WOBSOCK
@@ -34,21 +40,15 @@ bindsym Print exec sway-interactive-screenshot
 
 bindsym $mod+Up exec makoctl restore
 bindsym $mod+Down exec makoctl dismiss
-bindsym $mod+apostrophe exec makoctl dismiss
 bindsym $mod+Return exec $term
 bindsym $mod+q kill
-floating_modifier $mod normal
 bindsym $mod+Shift+c reload
 bindsym $mod+Shift+e exec swaynag -t warning -m 'Exit?' -B 'Yes' 'swaymsg exit'
 bindsym $mod+$left focus left
 bindsym $mod+$down focus down
 bindsym $mod+$up focus up
 bindsym $mod+$right focus right
-# Arrow keys
-# bindsym $mod+Left focus left
-# bindsym $mod+Down focus down
-# bindsym $mod+Up focus up
-# bindsym $mod+Right focus right
+
 bindsym $mod+Shift+$left move left
 bindsym $mod+Shift+$down move down
 bindsym $mod+Shift+$up move up
@@ -57,7 +57,9 @@ bindsym $mod+Shift+Left move left
 bindsym $mod+Shift+Down move down
 bindsym $mod+Shift+Right move right
 bindsym $mod+Shift+Up move up
+
 bindsym $mod+Escape exec swaylock -f -c 000000
+
 bindsym $mod+1 workspace number 1
 bindsym $mod+2 workspace number 2
 bindsym $mod+3 workspace number 3
@@ -78,12 +80,14 @@ bindsym $mod+Shift+7 move container to workspace number 7
 bindsym $mod+Shift+8 move container to workspace number 8
 bindsym $mod+Shift+9 move container to workspace number 9
 bindsym $mod+Shift+0 move container to workspace number 10
+
 bindsym $mod+b splith
 bindsym $mod+v splitv
 bindsym $mod+s layout stacking
 bindsym $mod+w layout tabbed
 bindsym $mod+e layout toggle split
 bindsym $mod+f fullscreen
+
 bindsym $mod+Shift+space floating toggle
 bindsym $mod+space focus mode_toggle
 bindsym $mod+a focus parent
@@ -118,10 +122,10 @@ bar {
             focused_workspace #ffffff #ff440f #000000
             inactive_workspace #222222 #000000 #ffffff
         }
-        #status_command while date +'%Y-%m-%d %I:%M:%S %p'; do sleep 1; done
         status_command /usr/sbin/bumblebee-status -m cpu memory battery date time pasink pasource -p time.format="%H:%M CW %V" date.format="%a, %b %d %Y" -t iceberg-contrast
 }
 
+# Fk gaps
 gaps inner 0
 gaps outer 0
 smart_gaps off
@@ -131,11 +135,10 @@ default_border pixel 1
 for_window [class=".*"] border pixel 1
 
 ### Colors
-  # Class                   Border      BG       Text      Indicator  Child border
-  client.focused            #c5c8c6   #1d1f21   #ffffff    #ffffff    #c5c8c6
-  client.unfocused          #1d1f21   #1d1f21   #ffffff    #000000    #1d1f21
-  client.focused_inactive   #c5c8c6   #1d1f21   #ffffff    #ffffff    #c5c8c6
-  client.background         #1d1f21
+client.focused            #c5c8c6   #1d1f21   #ffffff    #ffffff    #c5c8c6
+client.unfocused          #1d1f21   #1d1f21   #ffffff    #000000    #1d1f21
+client.focused_inactive   #c5c8c6   #1d1f21   #ffffff    #ffffff    #c5c8c6
+client.background         #1d1f21
 
 # init apps on startup
 exec --no-startup-id pgrep spotify || exec spotify
