--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -44,7 +44,7 @@ window:
   decorations: full
 
   # When true, alacritty starts maximized.
-  start_maximized: true
+start_maximized: true
 
 scrolling:
   # Maximum number of lines in the scrollback buffer.
@@ -233,8 +233,8 @@ visual_bell:
 #
 # Window opacity as a floating point number from `0.0` to `1.0`.
 # The value `0.0` is completely transparent and `1.0` is opaque.
-window.opacity: 1.0
-
+background_opacity: 0.6
+window.opacity: 0.6
 # Mouse bindings
 #
 # Available fields:
