--- a/mako/config
+++ b/mako/config
@@ -1,17 +1,17 @@
 output=*
-background-color=#999999
+background-color=#999999ff
 border-radius=1
-border-color=#cccccc
+border-color=#ccccccff
 text-color=#000000
 anchor=bottom-left
 default-timeout=10000
 
 [urgency=low]
-border-color=#cccccc
+border-color=#ccccccff
 
 [urgency=normal]
-border-color=#800080
+border-color=#800080ff
 
 [urgency=high]
-border-color=#ff0000
+border-color=#ff0000ff
 default-timeout=0
