--- a/sway/config
+++ b/sway/config
@@ -66,7 +66,7 @@ bindsym $mod+Shift+Down move down
 bindsym $mod+Shift+Right move right
 bindsym $mod+Shift+Up move up
 
-bindsym $mod+Escape exec swaylock -f -c 000000
+bindsym $mod+Escape exec random_wallpaper
 
 bindsym $mod+1 workspace number 1
 bindsym $mod+2 workspace number 2
