--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,7 +5,8 @@ set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
 
-set -g default-terminal "screen-256color"
+set -g default-terminal "tmux-256color"
+set-option -sa terminal-features ',XXX:RGB'
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
@@ -13,8 +14,8 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'arcticicestudio/nord-tmux'
 set -g @plugin 'schasse/tmux-jump'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-sidebar'
 set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'sainnhe/tmux-fzf'
 
 set -g @continuum-restore 'on'
 
@@ -24,3 +25,8 @@ set -s escape-time 0
 bind C-v paste-buffer
 bind % split-window -h -c "#{pane_current_path}"
 bind '"' split-window -v -c "#{pane_current_path}"
+
+bind -n M-h select-pane -L
+bind -n M-j select-pane -D
+bind -n M-k select-pane -U
+bind -n M-l select-pane -R
