--- a/fuzzel/fuzzel.ini
+++ b/fuzzel/fuzzel.ini
@@ -1,8 +1,8 @@
 [main]
-font=Inter:size=14
+font=Inter:size=13
 dpi-aware=no
 prompt="❯ "
-icon-theme=Papirus
+icon-theme=Adwaita
 icons-enabled=true
 lines=15
 width=40
@@ -10,14 +10,22 @@ inner-pad=8
 image-size-ratio=0
 layer=overlay
 
+# [colors]
+# background=1d2021dd
+# text=fbf1c7ff
+# match=#83a598ff
+# selection=83a598ff
+# selection-text=1d2021ff
+# selection-match=1d2021ff
 [colors]
-background=1d2021dd
-text=fbf1c7ff
-match=#83a598ff
-selection=83a598ff
-selection-text=1d2021ff
-selection-match=1d2021ff
+background=282a36dd
+text=f8f8f2ff
+match=8be9fdff
+selection-match=8be9fdff
+selection=44475add
+selection-text=f8f8f2ff
+border=bd93f9ff
 
 [border]
-width=0
-radius=0
+width=1
+radius=1
