--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "zsh/zsh-autocomplete"]
-	path = zsh/zsh-autocomplete
-	url = https://github.com/marlonrichert/zsh-autocomplete.git
+[submodule "zsh/fsh"]
+	path = zsh/fsh
+	url = https://github.com/zdharma-continuum/fast-syntax-highlighting
