--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,17 +6,16 @@ bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
 
 set -g default-terminal "tmux-256color"
-set-option -sa terminal-features ',XXX:RGB'
+set-option -sa terminal-features ',alacritty:RGB'
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'arcticicestudio/nord-tmux'
+set -g @plugin 'dracula/tmux'
 set -g @plugin 'schasse/tmux-jump'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'sainnhe/tmux-fzf'
-
 set -g @continuum-restore 'on'
 
 run -b '~/.tmux/plugins/tpm/tpm'
@@ -30,3 +29,11 @@ bind -n M-h select-pane -L
 bind -n M-j select-pane -D
 bind -n M-k select-pane -U
 bind -n M-l select-pane -R
+
+
+set -g @dracula-plugins "git kubernetes-context weather network cpu-usage ram-usage"
+set -g @dracula-show-fahrenheit false
+set -g @dracula-show-location false
+set -g @dracula-clients-minimum 1
+set -g @dracula-show-powerline true
+set -g @dracula-kubernetes-context-color "pink dark_gray"
