--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -1,5 +1,5 @@
 window:
-  opacity: 0.6
+  opacity: 0.7
   dimensions:
     columns: 0
     lines: 0
@@ -24,7 +24,10 @@ font:
     style: Bold
   italic:
       family: FiraCode Nerd Font Mono
-      style: Italic
+      style: Retina
+  bold_italic:
+      family: FiraCode Nerd Font Propo
+      style: SemiBold
   size: 10.0
   offset:
     x: 0
