--- a/k9s/config.yml
+++ b/k9s/config.yml
@@ -122,7 +122,7 @@ k9s:
         - erp
         - kasdal-producao
       view:
-        active: pods
+        active: xray
       featureGates:
         nodeShell: false
       shellPod:
