config dos monitor do trampo, ver para deixar dinamico

--- a/sway/config
+++ b/sway/config
@@ -38,8 +38,18 @@ for_window [app_id="fzf-kill"] floating enable
 # Passmenu
 bindsym $mod+apostrophe exec passotp
 
+# default wallpaper
 #output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
+
 output * bg $HOME/Pictures/buster.png fill
+
+output eDP-1 {
+    position 1920 0
+}
+
+output HDMI-A-1 {
+    position 0 0
+}
 
 input * {
     xkb_layout "br"
