--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -17,13 +17,13 @@ scrolling:
 tabspaces: 8
 font:
   normal:
-    family: FiraCode Nerd Font Mono
+    family: FiraCode Nerd Font 
     style: Regular
   bold:
-    family: FiraCode Nerd Font Mono
+    family: FiraCode Nerd Font 
     style: Bold
   italic:
-      family: FiraCode Nerd Font Mono
+      family: FiraCode Nerd Font 
       style: Retina
   bold_italic:
       family: FiraCode Nerd Font Propo
