--- a/sway/config
+++ b/sway/config
@@ -175,9 +175,12 @@ client.background         #1d1f21
 workspace_layout tabbed
 
 # init apps on startup
-exec --no-startup-id pgrep spotify || exec spotify
-exec --no-startup-id pgrep firefox || exec firefox
+workspace 1
 exec --no-startup-id pgrep alacritty || exec alacritty
+exec --no-startup-id pgrep firefox || exec firefox
+
+workspace 2
+exec --no-startup-id pgrep spotify || exec spotify
 exec --no-startup-id pgrep discord || exec discord
 exec --no-startup-id pgrep teams || exec teams
 
