--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -18,7 +18,7 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'sainnhe/tmux-fzf'
 set -g @continuum-restore 'on'
 
-run -b '~/.tmux/plugins/tpm/tpm'
+run -b '~/.config/tmux/plugins/tpm/tpm'
 set -s escape-time 0
 
 bind C-v paste-buffer
