--- a/sway-interactive-screenshot/config.toml
+++ b/sway-interactive-screenshot/config.toml
@@ -14,13 +14,13 @@ file_name = "screenshot_%Y-%m-%dT%H:%M:%S.png"
 type = "png" # "jpeg", "ppm"
 
 # JPEG quality value.
-jpeg_quality = 80
+jpeg_quality = 100
 
 # PNG compression level value.
-png_level = 6
+png_level = 3
 
 # Show or hide cursor.
-cursor = false
+cursor = true
 
 
 [screencast]
