--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -5,8 +5,8 @@ set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
 
-set -g default-terminal "tmux-256color"
-set-option -sa terminal-features ',alacritty:RGB'
+#set -g default-terminal "tmux-256color"
+set-option -a terminal-overrides ",alacritty:RGB"
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
@@ -29,7 +29,6 @@ bind -n M-h select-pane -L
 bind -n M-j select-pane -D
 bind -n M-k select-pane -U
 bind -n M-l select-pane -R
-
 
 set -g @dracula-plugins "git kubernetes-context weather network cpu-usage ram-usage"
 set -g @dracula-show-fahrenheit false
