--- a/wob/wob.ini
+++ b/wob/wob.ini
@@ -5,12 +5,10 @@ border_offset = 4
 border_size = 4
 bar_padding = 4
 margin = 1
-anchor = 0 (top = 1, bottom = 2, left = 4, right = 8)
-overflow_mode = 0 (wrap = 0, nowrap = 1)
-output_mode = 0 (whitelist = 0, all = 1, focused = 2)
-background = #000000ff
-value = #ffffffff
-border = #ccaa1111
-overflow_background = #000000ff
-overflow_value = #ff0000ff
-overflow_border = #ffffffff
+anchor = center
+overflow_mode = nowrap 
+output_mode = focused 
+background_color = 111111cc
+border_color = aa00ffcc
+overflow_background_color = 000000cc
+overflow_border_color = 4fbfaacc 
