--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -5,9 +5,6 @@ set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
 
-#set -g default-terminal "tmux-256color"
-set-option -a terminal-overrides ",alacritty:RGB"
-
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
@@ -35,3 +32,5 @@ set -g @dracula-show-fahrenheit false
 set -g @dracula-show-location false
 set -g @dracula-clients-minimum 1
 set -g @dracula-show-powerline true
+
+set-option -sa terminal-features ',*:Tc'
