--- a/wob/wob.ini
+++ b/wob/wob.ini
@@ -7,7 +7,7 @@ bar_padding = 4
 margin = 1
 anchor = center
 overflow_mode = nowrap 
-output_mode = focused 
+output_mode = all 
 background_color = 111111cc
 border_color = aa00ffcc
 overflow_background_color = 000000cc
