--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -29,8 +29,9 @@ bind -n M-l select-pane -R
 
 set -g @dracula-plugins "git kubernetes-context weather network cpu-usage ram-usage"
 set -g @dracula-show-fahrenheit false
-set -g @dracula-show-location false
+set -g @dracula-show-location true
 set -g @dracula-clients-minimum 1
 set -g @dracula-show-powerline true
-
+set -g @dracula-fixed-location "Blumenau"
+set -g @dracula-refresh-rate 1
 set-option -sa terminal-features ',*:Tc'
