--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,3 +1,6 @@
+set-option -sa terminal-features ',xterm-256color:RGB'
+set-option -ga terminal-overrides ',xterm-256color:Tc'
+
 set -g prefix C-Space
 
 set-window-option -g mode-keys vi
@@ -34,4 +37,3 @@ set -g @dracula-clients-minimum 1
 set -g @dracula-show-powerline true
 set -g @dracula-fixed-location "Blumenau"
 set -g @dracula-refresh-rate 1
-set-option -sa terminal-features ',*:Tc'
