--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,4 +1,4 @@
-set-option -ga terminal-overrides ',xterm-256color:Tc'
+set-option -ga terminal-overrides ',xterm-256color:RGB'
 
 set -g prefix C-Space
 
@@ -12,10 +12,7 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'dracula/tmux'
 set -g @plugin 'schasse/tmux-jump'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'sainnhe/tmux-fzf'
-set -g @continuum-restore 'on'
 
 run -b '~/.config/tmux/plugins/tpm/tpm'
 set -s escape-time 0
@@ -36,3 +33,7 @@ set -g @dracula-clients-minimum 1
 set -g @dracula-show-powerline true
 set -g @dracula-fixed-location "Blumenau"
 set -g @dracula-refresh-rate 1
+set -g @dracula-kubernetes-context-colors "pink dark_gray"
+
+# Setting to make active pane border more visible and increase border size
+set -g pane-active-border-style fg=colour208,bg=colour208
