--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -36,4 +36,4 @@ set -g @dracula-refresh-rate 1
 set -g @dracula-kubernetes-context-colors "pink dark_gray"
 
 # Setting to make active pane border more visible and increase border size
-set -g pane-active-border-style fg=colour208,bg=colour208
+set -g pane-active-border-style fg=colour154,bg=default
