--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -34,6 +34,4 @@ set -g @dracula-show-powerline true
 set -g @dracula-fixed-location "Blumenau"
 set -g @dracula-refresh-rate 1
 set -g @dracula-kubernetes-context-colors "pink dark_gray"
-
-# Setting to make active pane border more visible and increase border size
-set -g pane-active-border-style fg=colour154,bg=default
+set -g @dracula-border-contrast true
