--- a/rescrobbled/config.toml
+++ b/rescrobbled/config.toml
@@ -1,5 +1,4 @@
-lastfm-key = ""
-lastfm-secret = ""
+lastfm-key = "df8de79a688b0d1b7d641cf6b406bd82"
+lastfm-secret = "6056cd5d9127ed4780747f39517f3309"
 min-play-time = 0
-player-whitelist = [ncspot]
-filter-script = ""
+player-whitelist = ["ncspot"]
