--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -27,8 +27,8 @@ bind -n M-k select-pane -U
 bind -n M-l select-pane -R
 
 set -g @dracula-plugins "git kubernetes-context weather network-bandwidth network-vpn"
-set -g @dracula-weather-show-fahrenheit false
-set -g @dracula-weather-show-location false
+set -g @dracula-show-fahrenheit false
+set -g @dracula-show-location false
 set -g @dracula-show-powerline true
 set -g @dracula-fixed-location "Blumenau"
 set -g @dracula-refresh-rate 1
