--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -26,11 +26,11 @@ bind -n M-j select-pane -D
 bind -n M-k select-pane -U
 bind -n M-l select-pane -R
 
-set -g @dracula-plugins "git kubernetes-context weather network-bandwidth network-vpn"
+set -g @dracula-plugins "git kubernetes-context weather network-vpn"
 set -g @dracula-show-fahrenheit false
 set -g @dracula-show-location false
 set -g @dracula-show-powerline true
 set -g @dracula-fixed-location "Blumenau"
-set -g @dracula-refresh-rate 1
+set -g @dracula-refresh-rate 10
 set -g @dracula-kubernetes-context-colors "pink dark_gray"
 set -g @dracula-border-contrast true
