--- a/sway/config
+++ b/sway/config
@@ -5,11 +5,12 @@ exec rm -f $WOBSOCK && mkfifo $WOBSOCK && tail -f $WOBSOCK | wob
 # swayfx config aka eye candy
 blur enable
 blur_xray enable
-blur_passes 2
-blur_radius 5
+blur_passes 1
+blur_radius 3
 shadows enable
 shadows_on_csd enable
-shadow_blur_radius 20
+shadow_blur_radius 40
+shadow_color #000000cc
 corner_radius 1
 smart_corner_radius enable
 
@@ -170,11 +171,13 @@ smart_gaps on
 default_border pixel 1
 for_window [class=".*"] border pixel 1
 
+titlebar_separator disable
+hide_edge_borders smart_no_gaps
+
 ### Colors
 client.focused            #c5c8c6   #1d1f21   #ffffff    #ffffff    #c5c8c6
 client.unfocused          #1d1f21   #1d1f21   #ffffff    #000000    #1d1f21
 client.focused_inactive   #c5c8c6   #1d1f21   #ffffff    #ffffff    #c5c8c6
-client.background         #1d1f21
 
 #default layout
 workspace_layout tabbed
