--- a/mako/config
+++ b/mako/config
@@ -3,7 +3,7 @@ background-color=#111111cc
 border-radius=1
 border-color=#cccccccc
 text-color=#ffffff
-anchor=bottom-left
+anchor=top-left
 default-timeout=10000
 
 [urgency=low]
