--- a/sway/config
+++ b/sway/config
@@ -5,8 +5,8 @@ exec rm -f $WOBSOCK && mkfifo $WOBSOCK && tail -f $WOBSOCK | wob
 # swayfx config aka eye candy
 blur enable
 blur_xray enable
-blur_passes 1
-blur_radius 1
+blur_passes 3
+blur_radius 2
 shadows enable
 shadows_on_csd enable
 shadow_blur_radius 40
@@ -44,7 +44,8 @@ bindsym $mod+apostrophe exec passotp
 #output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
 
 #output HDMI-A-1 bg $HOME/Pictures/nanachi.jpg fill
-output HDMI-A-1 bg $HOME/Pictures/buster.png fill
+#output HDMI-A-1 bg $HOME/Pictures/buster.png fill
+output HDMI-A-1 bg $HOME/Pictures/sephiroth_1.jpg fill
 output eDP-1 bg $HOME/Pictures/ggdc_wall.png fill
 
 output eDP-1 {
