bar playing status | sample custom status bar script

--- a/sway/config
+++ b/sway/config
@@ -142,7 +142,7 @@ bindsym $mod+r mode "resize"
 
 bar {
     position top
-    font FiraMono Nerd Font Propo 11
+    font FiraMono Nerd Font Propo 10
         colors {
             statusline #000000
             background #161821
@@ -150,7 +150,7 @@ bar {
             focused_workspace #ffffff #ff440f #000000
             inactive_workspace #222222 #000000 #ffffff
         }
-        status_command /usr/sbin/bumblebee-status -m nic cpu memory battery spacer date time pasink pasource -p time.format="%H:%M" date.format="%a, %b %d %Y" -p nic.states="^down" -t dracula-powerline
+        status_command /usr/sbin/bumblebee-status -m playerctl nic cpu memory battery date time pasink pasource -p time.format="%H:%M" date.format="%a %b %d" -p nic.states="^down" -p nic.format="{ssid} {strength}" -t dracula-powerline
 }
 
 gaps inner 1
