ram usage show % only

--- a/sway/config
+++ b/sway/config
@@ -150,7 +150,7 @@ bar {
             focused_workspace #ffffff #ff440f #000000
             inactive_workspace #222222 #000000 #ffffff
         }
-        status_command /usr/sbin/bumblebee-status -m playerctl nic cpu memory battery date time pasink pasource -p time.format="%H:%M" date.format="%a %b %d" -p nic.states="^down" -p nic.format="{ssid} {strength}" -t dracula-powerline
+        status_command /usr/sbin/bumblebee-status -m playerctl nic cpu memory battery date time pasink pasource -p time.format="%H:%M" date.format="%a %b %d" -p memory.format="{percent:05.02f}%" -p nic.states="^down" -p nic.format="{ssid} {strength}" -t dracula-powerline
 }
 
 gaps inner 1
