--- a/sway/config
+++ b/sway/config
@@ -203,7 +203,7 @@ workspace_layout tabbed
 
 # init apps on startup
 workspace 2
-exec --no-startup-id pgrep alacritty || exec alacritty
+exec --no-startup-id pgrep alacritty || exec $term -e tmux
 exec --no-startup-id pgrep firefox || exec firefox
 
 workspace 1
