--- a/sway/config
+++ b/sway/config
@@ -37,21 +37,12 @@ bindsym $mod+Escape exec $lock
 set $lights_out swaymsg "output * dpms off"
 set $lights_on swaymsg "output * dpms on"
 
-exec swayidle -w \
-    timeout 15 'if pgrep -x swaylock; then swaymsg "output * power off"; fi' \
-    timeout 300 $lock \
-    timeout 300 $lights_out \
-    resume $lights_on \
-    before-sleep $lights_out \
-    before-sleep 'playerctl pause' \
-    before-sleep $lock 
-
 # FZF KILL 
 bindsym $mod+delete exec kill_ps
 # Passmenu
 bindsym $mod+apostrophe exec passotp
 
-output HDMI-A-1 bg $HOME/Pictures/griffith.png center
+output HDMI-A-1 bg $HOME/Pictures/nanachi.jpg center
 output eDP-1 bg $HOME/Pictures/ggdc_wall.png fill
 
 output eDP-1 {
@@ -60,20 +51,6 @@ output eDP-1 {
 
 output HDMI-A-1 {
     position 0 0
-}
-
-# Work note touchpad
-input type:touchpad {
-    natural_scroll disabled
-    dwt enabled
-    accel_profile "flat"
-    pointer_accel 0.6 # set pad sensitivity (between -1 and 1)
-}
-
-# Work mouse
-input type:mouse {
-    accel_profile "flat"
-    pointer_accel -1 # set mouse sensitivity (between -1 and 1)
 }
 
 input type:keyboard {
