--- a/sway/config
+++ b/sway/config
@@ -42,7 +42,7 @@ bindsym $mod+delete exec kill_ps
 # Passmenu
 bindsym $mod+apostrophe exec passotp
 
-output HDMI-A-1 bg $HOME/Pictures/nanachi.jpg center
+output HDMI-A-1 bg $HOME/Pictures/buster.png fill
 output eDP-1 bg $HOME/Pictures/ggdc_wall.png fill
 
 output eDP-1 {
