--- a/sway/config
+++ b/sway/config
@@ -53,7 +53,15 @@ output HDMI-A-1 {
     position 0 0
 }
 
-input type:keyboard {
+input "type:touchpad" {
+    tap enabled
+    natural_scroll enabled
+    pointer_accel 0.3
+    accel_profile flat
+    scroll_method two_finger
+}
+
+input "type:keyboard" {
     xkb_numlock enabled
     xkb_layout "br"
 }
