--- a/git/config
+++ b/git/config
@@ -5,3 +5,5 @@
     helper = !/usr/bin/gh auth git-credential
 [credential "https://gist.github.com"]
     helper = !/usr/bin/gh auth git-credential
+[init]
+	defaultBranch = main
