--- a/waybar/config
+++ b/waybar/config
@@ -56,7 +56,7 @@
         "format": " {}",
         "interval": 1,
         "max-length": 50,
-        "exec": "$HOME/.config/waybar/mediaplayer.sh 2> /dev/null", // Script in resources folder
-        "exec-if": "pgrep spotify"
+        "exec": "$DOTFILES/scripts/playing_status 2> /dev/null", // Script in resources folder
+        "exec-if": "pgrep ncspot"
     }
 }
